--- a/index.html
+++ b/index.html
@@ -395,10 +395,8 @@
           <div class="price-item col-md-4 col-sm-6 col-xs-12">
             <div class="pricing-table elevation--z1">
               <div class="pricing-details">
-                <h2>Personal</h2>
-                <span>1 hour $80</span>
-                <span>45 min $65</span>
-                <span>30 min $45</span> /* TODO Enforce break */
+                <h2>1hr Personal</h2>
+                <span>$80</span>
                 <ul>
                   <li>1-2 people</li>
                   <li>tailored to your needs</li>
@@ -410,8 +408,34 @@
           <div class="price-item col-md-4 col-sm-6 col-xs-12">
             <div class="pricing-table elevation--z1">
               <div class="pricing-details">
-                <h2>Group</h2>
-                <span>1 hour $80</span>
+                <h2>45min Personal</h2>
+                <span>$65</span>
+                <ul>
+                  <li>1-2 people</li>
+                  <li>tailored to your needs</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="price-item col-md-4 col-sm-6 col-xs-12">
+            <div class="pricing-table elevation--z1">
+              <div class="pricing-details">
+                <h2>30min Personal</h2>
+                <span>$45</span>
+                <ul>
+                  <li>1-2 people</li>
+                  <li>tailored to your needs</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="price-item col-md-4 col-sm-6 col-xs-12">
+            <div class="pricing-table elevation--z1">
+              <div class="pricing-details">
+                <h2>1hr Group</h2>
+                <span>$80</span>
                 <ul>
                   <li>3-5 people</li>
                   <li>social training</li>
@@ -423,29 +447,21 @@
           <div class="price-item col-md-4 col-sm-6 col-xs-12">
             <div class="pricing-table elevation--z1">
               <div class="pricing-details">
-                <h2>Bootcamp</h2>
-                <span>1 hour $20</span>
-                <ul>
-                  <li>larger groups</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-
-          <div class="price-item col-md-4 col-sm-6 col-xs-12">
-            <div class="pricing-table elevation--z1">
-              <div class="pricing-details">
-                <h2>Programme Design</h2>
-                <span>30 minutes $40</span>
+                <h2>Program Design</h2>
+                <span>$40</span>
                 <ul>
                   <li>designed for you</li>
-                  <li>includes 30 minute</li>
+                  <li>includes 30 min session</li>
                 </ul>
               </div>
             </div>
           </div>
         </div>
+        <div class="pricing-footer text-center">
+          <a class="btn btn-common page-scroll" href="#contact">Enquiry</a>
+        </div>
       </div>
+
       <div class="col-md-12 pricing-section mix tkd-price card elevation--z1">
         <div class="section-header pricing-header">
           <p class="pricing-subtitle">Taekwon-Do</p>
