--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
           </div>
         </div>
         <div class="pricing-footer text-center">
-          <a class="btn btn-common page-scroll" href="#contact">Enquiry</a>
+          <a class="btn btn-common page-scroll" href="#contact">Enquire</a>
         </div>
       </div>
 
@@ -521,7 +521,7 @@
       <div class="section-header">
         <h2 class="section-title">Our Team</h2>
         <hr class="lines">
-        <p class="section-subtitle">Meet our team of highly qualified, experienced & motivated instructors.</p>
+        <p class="section-subtitle">Meet our team of highly qualified, experienced, & motivated instructors.</p>
       </div>
       <div class="row">
         <div class="col-lg-3 col-md-6 col-xs-12">
