--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="col-md-4 col-sm-6">
           <div class="item-boxes wow fadeInDown" data-wow-delay="0.2s">
             <div class="icon">
-              <i class="fa fa-paw"></i>
+              <p class="tooltip--bottom" data-tooltip="Hello World!"><i class="fa fa-paw"></i></p>
             </div>
             <h4>TKD Kubz</h4>
             <p>Our TKD Kubz programme is a specially designed class for children aged between 3-6 years of age.</p>
