Revert "test tooltip"
This reverts commit 2610955bec679ad976209d274ea243ce1ec9cee7.

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="col-md-4 col-sm-6">
           <div class="item-boxes wow fadeInDown" data-wow-delay="0.2s">
             <div class="icon">
-              <p class="tooltip--bottom" data-tooltip="Hello World!"><i class="fa fa-paw"></i></p>
+              <i class="fa fa-paw"></i>
             </div>
             <h4>TKD Kubz</h4>
             <p>Our TKD Kubz programme is a specially designed class for children aged between 3-6 years of age.</p>
