--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="training for life, taekwon-do, personal training, postnatal, prenatal, pelvic floor, self defence">
   <meta name="Description" content="Pulse Taining For Life offer ITF Taekwon-Do, self defence, and personal training with a focus on pre/post natal women, and mens and womens pelvic floor issues">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
-  <title>Pulse Taining For Life</title>
+  <title>Pulse Training For Life</title>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
