--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
   <title>Pulse Training For Life</title>
 
+  <!-- Fac icons -->
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://pulse-nz.github.io/apple-touch-icon-144x144.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://pulse-nz.github.io/apple-touch-icon-152x152.png" />
+  <link rel="icon" type="image/png" href="https://pulse-nz.github.io/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="https://pulse-nz.github.io/favicon-16x16.png" sizes="16x16" />
+  <meta name="application-name" content="Pulse Training For Life" />
+  <meta name="msapplication-TileColor" content="#FFFFFF" />
+  <meta name="msapplication-TileImage" content="https://pulse-nz.github.io/mstile-144x144.png" />
+
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
