--- a/index.html
+++ b/index.html
@@ -476,13 +476,17 @@
           <p class="pricing-subtitle">Taekwon-Do</p>
         </div>
 
+        <span>Twice Weekly</span>
+        <input class="toogle" type="checkbox" id="tkd-freq-toogle" /><label for="tkd-freq-toogle">Toggle</label>
+        <span>Once Weekly</span>
 
         <div class="row pricing-tables">
           <div class="price-item col-md-4 col-sm-6 col-xs-12">
             <div class="pricing-table elevation--z1">
               <div class="pricing-details">
                 <h2>Individual</h2>
-                <span>$65</span>
+                <span class="price-once">$50</span>
+                <span class="price-twice">$65</span>
                 <ul>
                   <li>Monthly</li>
                 </ul>
@@ -494,7 +498,8 @@
             <div class="pricing-table elevation--z1">
               <div class="pricing-details">
                 <h2>2 Person</h2>
-                <span>$120</span>
+                <span class="price-once">$90</span>
+                <span class="price-twice">$120</span>
                 <ul>
                   <li>Monthly</li>
                 </ul>
@@ -506,7 +511,8 @@
             <div class="pricing-table elevation--z1">
               <div class="pricing-details">
                 <h2>3 or more</h2>
-                <span>$155</span>
+                <span class="price-once">$120</span>
+                <span class="price-twice">$155</span>
                 <ul>
                   <li>Monthly</li>
                   <li>Capped Price</li>
