stlye toogle of tkd pricing

--- a/index.html
+++ b/index.html
@@ -476,16 +476,18 @@
           <p class="pricing-subtitle">Taekwon-Do</p>
         </div>
 
-        <span>Twice Weekly</span>
-        <input class="toogle" type="checkbox" id="tkd-freq-toogle" /><label for="tkd-freq-toogle">Toggle</label>
-        <span>Once Weekly</span>
+        <div class="toogle-container">
+          <label class="left">Twice Weekly</label>
+          <input class="toogle" type="checkbox" id="tkd-freq-toogle" /><label class="toogle" for="tkd-freq-toogle">Toggle</label>
+          <label class="right">Once Weekly</label>
+        </div>
 
         <div class="row pricing-tables">
           <div class="price-item col-md-4 col-sm-6 col-xs-12">
             <div class="pricing-table elevation--z1">
               <div class="pricing-details">
                 <h2>Individual</h2>
-                <span class="price-once">$50</span>
+                <span class="price-once hide">$50</span>
                 <span class="price-twice">$65</span>
                 <ul>
                   <li>Monthly</li>
@@ -498,7 +500,7 @@
             <div class="pricing-table elevation--z1">
               <div class="pricing-details">
                 <h2>2 Person</h2>
-                <span class="price-once">$90</span>
+                <span class="price-once hide">$90</span>
                 <span class="price-twice">$120</span>
                 <ul>
                   <li>Monthly</li>
@@ -511,7 +513,7 @@
             <div class="pricing-table elevation--z1">
               <div class="pricing-details">
                 <h2>3 or more</h2>
-                <span class="price-once">$120</span>
+                <span class="price-once hide">$120</span>
                 <span class="price-twice">$155</span>
                 <ul>
                   <li>Monthly</li>
