allow clicking on toogle left and right labels

--- a/index.html
+++ b/index.html
@@ -477,9 +477,9 @@
         </div>
 
         <div class="toogle-container">
-          <label class="left">Twice Weekly</label>
+          <label class="left toogle-twice">Twice Weekly</label>
           <input class="toogle" type="checkbox" id="tkd-freq-toogle" /><label class="toogle" for="tkd-freq-toogle">Toggle</label>
-          <label class="right">Once Weekly</label>
+          <label class="right toogle-once">Once Weekly</label>
         </div>
 
         <div class="row pricing-tables">
