add wording for SD pricing etc

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <div class="section-header">
         <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Activities</h2>
         <hr class="lines wow zoomIn" data-wow-delay="0.3s">
-        <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Pulse Training For Life, based in Christchurch, offers a range of activities, including ITF Taekwon-Do, personal or small group fitness training, and self defence workshops</p>
+        <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">If you want to increase your general fitness, have an active pregnancy/safe post partum return to exercise or gain confidence through learning how to defend yourself, look no further. Pulse Training for Life has all this and more!</p>
       </div>
       <div class="row justify-content-center">
         <div class="col-md-4 col-sm-6">
@@ -393,8 +393,12 @@
       <div class="col-md-12 pricing-section mix self-price card elevation--z1">
         <div class="section-header pricing-header">
           <p class="pricing-subtitle">Self Defence</p>
+          <p style="color: #00b4eb;" class="section-subtitle">Price on application</p>
         </div>
-
+        <p>Our self defence training services are tailored to your needs.  Whether it is a corporate group or school wanting a workplace seminar for a few hours or community groups after full day or weekend workshops, we will work with you to meet your requirements.</p>
+        <div class="pricing-footer text-center">
+          <a class="btn btn-common page-scroll" href="#contact">Enquire</a>
+        </div>
       </div>
       <div class="col-md-12 pricing-section mix personal-price card elevation--z1">
         <div class="section-header pricing-header">
@@ -525,7 +529,7 @@
 
         </div>
         <div class="pricing-footer text-center">
-          <a class="btn btn-common" id="apply">Apply for your free trial</a>
+          <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdG70Vzs0Qn0_RS0W_vbBcCkAMkAC-aE0lYJDem0-5v_qWDWQ/viewform" class="btn btn-common" id="apply">Book for your free trial</a>
         </div>
       </div>
     </div>
