wording and social icons

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <a class="nav-link page-scroll" href="#hero-area">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link page-scroll" href="#services">Activities</a>
+              <a class="nav-link page-scroll" href="#services">For You</a>
             </li>
             <li class="nav-item">
               <a class="nav-link page-scroll" href="#portfolios">Gallery</a>
@@ -79,7 +79,7 @@
           <a class="page-scroll" href="#hero-area">Home</a>
         </li>
         <li>
-          <a class="page-scroll" href="#services">Activities</a>
+          <a class="page-scroll" href="#services">For You</a>
         </li>
         <li>
           <a class="page-scroll" href="#portfolios">Gallery</a>
@@ -119,7 +119,7 @@
   <section id="services" class="section">
     <div class="container">
       <div class="section-header">
-        <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Activities</h2>
+        <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">For You</h2>
         <hr class="lines wow zoomIn" data-wow-delay="0.3s">
         <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">If you want to increase your general fitness, have an active pregnancy/safe post partum return to exercise or gain confidence through learning how to defend yourself, look no further. Pulse Training for Life has all this and more!</p>
       </div>
@@ -130,7 +130,7 @@
               <i class="fa fa-paw"></i>
             </div>
             <h4>TKD Kubz</h4>
-            <p>Our TKD Kubz programme is a specially designed class for children aged between 3-6 years of age.</p>
+            <p>Our TKD Kubz programme is a specially designed class for your children aged between 3-6 years of age.</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6">
@@ -139,7 +139,7 @@
               <i class="fa fa-child"></i>
             </div>
             <h4>TKD Kids</h4>
-            <p>Junior Taekwon-Do programme for children aged between 5-9 years of age.</p>
+            <p>Junior Taekwon-Do programme for your children aged between 5-9 years of age.</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6">
@@ -157,7 +157,7 @@
               <i class="fa fa-bullhorn"></i>
             </div>
             <h4>Personal Training</h4>
-            <p>Specialised coaching focused on pre-postnatal women, and men & women with pelvic floor issues. From a qualified pre/post natal coach.</p>
+            <p>We give you specialised coaching focused on pre-postnatal women, and men & women with pelvic floor issues. Be guided by a qualified pre/post natal coach.</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6">
@@ -166,7 +166,7 @@
               <i class="fa fa-shield"></i>
             </div>
             <h4>Self Defence</h4>
-            <p>Our coaches are accredited by Protect Self Defence, the leading provider of self defence workshops in New Zealand.</p>
+            <p>Be coached in real world, practical self defence skills from coaches accredited by PROTECT Self Defence, the leading provider of personal protection training! Feel confident and empowered knowing that you have the skills to get yourself home to your loved ones.</p>
           </div>
         </div>
       </div>
@@ -396,7 +396,8 @@
           <p class="pricing-subtitle">Self Defence</p>
           <p style="color: #00b4eb;" class="section-subtitle">Price on application</p>
         </div>
-        <p>Our self defence training services are tailored to your needs.  Whether it is a corporate group or school wanting a workplace seminar for a few hours or community groups after full day or weekend workshops, we will work with you to meet your requirements.</p>
+        <p>Our self defence training services are tailored directly to your needs, to deliver the best value possible within your timeframe and budget.</p>
+        <p>Whether you are a corporate group looking for a workplace seminar or a school or community group looking for weekday or weekend workshops from 1-hour to a full day, we will work with you to meet your exact needs.</p>
         <div class="pricing-footer text-center">
           <a class="btn btn-common page-scroll" href="#contact">Enquire</a>
         </div>
@@ -462,7 +463,7 @@
             <div class="pricing-table elevation--z1">
               <div class="pricing-details">
                 <h2>Program Design</h2>
-                <span>$40</span>
+                <span>$60</span>
                 <ul>
                   <li>designed for you</li>
                   <li>includes 30 min session</li>
@@ -696,16 +697,13 @@
               <h3>Contact us</h3>
               <div class="contact-address">
                 <p>Casebrook Intermediate, 90 Veitches Road, Christchurch </p>
-                <p class="phone">Phone: <span>(03 929 0067)</span></p>
-                <p class="email">Email: <span>(info@pulsetkd.co.nz)</span></p>
+                <p class="phone">Phone: <span>03 929 0067</span></p>
+                <p class="email">Email: <a target="_blank" href="mailto:angela@pulsetrainingforlife.co.nz">angela@pulsetrainingforlife.co.nz</a></p>
               </div>
               <div class="social-icons">
                 <ul>
-                  <li class="facebook"><a href="https://www.facebook.com/pulsetkd/" aria-label="facebook page"><i class="fa fa-facebook"></i></a></li>
-                  <!-- <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li> -->
-                  <!-- <li class="google-plus"><a href="#"><i class="fa fa-google-plus"></i></a></li> -->
-                  <!-- <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li> -->
-                  <!-- <li class="dribbble"><a href="#"><i class="fa fa-dribbble"></i></a></li> -->
+                  <li><a class="facebook fa fa-facebook" target="_blank" href="https://www.facebook.com/pulseangelaoliver/" aria-label="facebook page"></a></li>
+                  <li><a class="instagram fa fa-instagram" target="_blank" href="https://www.instagram.com/angelaloliverpt/" aria-label="instagram page"></a></li>
                 </ul>
               </div>
             </div>
@@ -764,7 +762,7 @@
               <a class="page-scroll" href="#hero-area">Home</a>
             </li>
             <li>
-              <a class="page-scroll" href="#services">Activities</a>
+              <a class="page-scroll" href="#services">For You</a>
             </li>
             <li>
               <a class="page-scroll" href="#pricing">Pricing</a>
