--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       <div class="section-header">
         <h2 class="section-title">Gallery</h2>
         <hr class="lines">
-        <p class="section-subtitle">For the visually mined, check out some snapshots of what we do.</p>
+        <p class="section-subtitle">For the visually minded, check out some snapshots of what we do.</p>
       </div>
       <div class="row">
         <div class="col-md-12">
