--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
   <!-- Team section End -->
 
   <!-- testimonial Section Start -->
-  <div id="testimonial" class="section" data-stellar-background-ratio="0.1">
+  <!-- <div id="testimonial" class="section" data-stellar-background-ratio="0.1">
     <div class="container">
       <div class="row justify-content-md-center">
         <div class="col-md-12">
@@ -684,7 +684,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- testimonial Section Start -->
 
   <!-- Contact Section Start -->
