--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="keywords" content="training for life, taekwon-do, personal training, postnatal, prenatal, pelvic floor, self defence">
-  <meta name="Description" content="Pulse Taining For Life offer ITF Taekwon-Do, self defence, and personal training with a focus on pre/post natal women, and mens and womens pelvic floor issues">
+  <meta name="keywords" content="training for life, personal training, postnatal, prenatal, pelvic floor, self defence">
+  <meta name="Description" content="Pulse Taining For Life offers self defence, and personal training with a focus on pre/post natal women, and mens and womens pelvic floor issues">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
   <meta name="google-site-verification" content="W1_DF8kSkup7PyqMJOHr2iP1leJ56CECyhJowW_nKcE" />
   <title>Pulse Training For Life</title>
@@ -64,7 +64,7 @@
               <a class="nav-link page-scroll" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link page-scroll" href="#team">Team</a>
+              <a class="nav-link page-scroll" href="#team">Your Coach</a>
             </li>
             <li class="nav-item">
               <a class="nav-link page-scroll" href="#contact">Contact</a>
@@ -88,7 +88,7 @@
           <a class="page-scroll" href="#pricing">Pricing</a>
         </li>
         <li>
-          <a class="page-scroll" href="#team">Team</a>
+          <a class="page-scroll" href="#team">Your Coach</a>
         </li>
         <li>
           <a class="page-scroll" href="#contact">Contact</a>
@@ -104,7 +104,6 @@
           <div class="contents text-center">
             <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">Pulse Training For Life</h1>
             <div class="text-center">
-              <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Taekwon-Do</p>
               <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Personal Training</p>
               <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Self Defence</p>
             </div>
@@ -124,33 +123,6 @@
         <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">If you want to increase your general fitness, have an active pregnancy/safe post partum return to exercise or gain confidence through learning how to defend yourself, look no further. Pulse Training for Life has all this and more!</p>
       </div>
       <div class="row justify-content-center">
-        <div class="col-md-4 col-sm-6">
-          <div class="item-boxes wow fadeInDown" data-wow-delay="0.2s">
-            <div class="icon">
-              <i class="fa fa-paw"></i>
-            </div>
-            <h4>TKD Kubz</h4>
-            <p>Our TKD Kubz programme is a specially designed class for your children aged between 3-6 years of age.</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6">
-          <div class="item-boxes wow fadeInDown" data-wow-delay="0.5s">
-            <div class="icon">
-              <i class="fa fa-child"></i>
-            </div>
-            <h4>TKD Kids</h4>
-            <p>Junior Taekwon-Do programme for your children aged between 5-9 years of age.</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6">
-          <div class="item-boxes wow fadeInDown" data-wow-delay="0.8s">
-            <div class="icon">
-              <i class="fa fa-male"></i>
-            </div>
-            <h4>TKD Youth / Adults</h4>
-            <p>No matter what your current fitness level, our instructors are trained to give you safe and enjoyable tuition.</p>
-          </div>
-        </div>
         <div class="col-md-4 col-sm-6">
           <div class="item-boxes wow fadeInDown" data-wow-delay="1.1s">
             <div class="icon">
@@ -240,8 +212,7 @@
         <p class="section-subtitle">For the visually minded, check out some snapshots of what we do.</p>
       </div>
       <div class="row">
-        <div class="col-md-12">
-          <!-- Portfolio Controller/Buttons -->
+        <!-- <div class="col-md-12">
           <div class="controls text-center">
             <a class="filter-portfolio active btn btn-common" data-filter="all">
                 All
@@ -256,39 +227,10 @@
                 Self Defence
               </a>
           </div>
-          <!-- Portfolio Controller/Buttons Ends-->
-        </div>
+        </div> -->
 
         <!-- Portfolio Recent Projects -->
         <div id="portfolio" class="row">
-          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix tkd">
-            <div class="portfolio-item">
-              <div class="shot-item">
-                <picture>
-                  <source srcset="img/portfolio/img1.webp" type="image/webp">
-                  <source srcset="img/portfolio/img1.jpg" type="image/jpeg">
-                  <img src="img/portfolio/img1.jpg" alt="Gallery Image" />
-                </picture>
-                <a class="overlay lightbox" aria-label="enlarge image" href="img/portfolio/img1.jpg">
-                    <i class="lnr lnr-eye item-icon"></i>
-                  </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix tkd">
-            <div class="portfolio-item">
-              <div class="shot-item">
-                <picture>
-                  <source srcset="img/portfolio/img2.webp" type="image/webp">
-                  <source srcset="img/portfolio/img2.jpg" type="image/jpeg">
-                  <img src="img/portfolio/img2.jpg" alt="Gallery Image" />
-                </picture>
-                <a class="overlay lightbox" aria-label="enlarge image" href="img/portfolio/img2.jpg">
-                    <i class="lnr lnr-eye item-icon"></i>
-                  </a>
-              </div>
-            </div>
-          </div>
           <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix self">
             <div class="portfolio-item">
               <div class="shot-item">
@@ -351,24 +293,6 @@
     <!-- Container Ends -->
   </section>
   <!-- Portfolio Section Ends -->
-
-  <!-- Start Video promo Section -->
-  <section class="video-promo section">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-8">
-          <div class="video-promo-content text-center">
-            <h2 class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Watch Our TKD Intro video</h2>
-            <p class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Pulse Taekwon-Do is affiliated to ITKD which has been established for over 40 years and has well over 3500 members and around 100 clubs nationwide. Our youngest start at just 3 years of age and our oldest is over 70!.</p>
-            <div style="padding:56.25% 0 0 0;position:relative;"><iframe title="TKD Promo Video" src="https://player.vimeo.com/video/245814163" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
-            <script src="https://player.vimeo.com/api/player.js"></script>
-            <p><a href="https://vimeo.com/245814163" aria-label="TKD Intro Video on vimeo"></a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- End Video Promo Section -->
   <!-- Start Pricing Table Section -->
   <section id="pricing" class="section">
     <div class="container" id="pricing-container">
@@ -379,9 +303,6 @@
       <div class="col-md-12">
         <!-- Pricing Controller/Buttons -->
         <div class="controls text-center">
-          <a class="filter-pricing btn btn-common" data-filter=".tkd-price">
-                Taekwon-Do
-              </a>
           <a class="filter-pricing btn btn-common" data-filter=".personal-price">
                 Personal Training
               </a>
@@ -411,7 +332,7 @@
             <div class="pricing-table elevation--z1">
               <div class="pricing-details">
                 <h2>1hr Personal</h2>
-                <span>$80</span>
+                <span>$95</span>
                 <ul>
                   <li>1-2 people</li>
                   <li>tailored to your needs</li>
@@ -424,7 +345,7 @@
             <div class="pricing-table elevation--z1">
               <div class="pricing-details">
                 <h2>45min Personal</h2>
-                <span>$65</span>
+                <span>$75</span>
                 <ul>
                   <li>1-2 people</li>
                   <li>tailored to your needs</li>
@@ -437,7 +358,7 @@
             <div class="pricing-table elevation--z1">
               <div class="pricing-details">
                 <h2>30min Personal</h2>
-                <span>$45</span>
+                <span>$55</span>
                 <ul>
                   <li>1-2 people</li>
                   <li>tailored to your needs</li>
@@ -449,8 +370,8 @@
           <div class="price-item col-md-4 col-sm-6 col-xs-12">
             <div class="pricing-table elevation--z1">
               <div class="pricing-details">
-                <h2>1hr Group</h2>
-                <span>$80</span>
+                <h2>1hr Small Group</h2>
+                <span>$95</span>
                 <ul>
                   <li>3-5 people</li>
                   <li>social training</li>
@@ -471,67 +392,22 @@
               </div>
             </div>
           </div>
+
+          <div class="price-item col-md-4 col-sm-6 col-xs-12">
+            <div class="pricing-table elevation--z1">
+              <div class="pricing-details">
+                <h2>Discounts</h2>
+                <span></span>
+                <ul>
+                  <li>5 or 10 session packages</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
         </div>
         <div class="pricing-footer text-center">
           <a class="btn btn-common page-scroll" href="#contact">Enquire</a>
-        </div>
-      </div>
-
-      <div class="col-md-12 pricing-section mix tkd-price card elevation--z1">
-        <div class="section-header pricing-header">
-          <p class="pricing-subtitle">Taekwon-Do</p>
-        </div>
-
-        <div class="toogle-container">
-          <label class="left toogle-twice">Twice Weekly</label>
-          <input class="toogle" type="checkbox" id="tkd-freq-toogle" /><label class="toogle" for="tkd-freq-toogle">Toggle</label>
-          <label class="right toogle-once">Once Weekly</label>
-        </div>
-
-        <div class="row pricing-tables">
-          <div class="price-item col-md-4 col-sm-6 col-xs-12">
-            <div class="pricing-table elevation--z1">
-              <div class="pricing-details">
-                <h2>Individual</h2>
-                <span class="price-once hide">$50</span>
-                <span class="price-twice">$65</span>
-                <ul>
-                  <li>Monthly</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-
-          <div class="price-item col-md-4 col-sm-6 col-xs-12">
-            <div class="pricing-table elevation--z1">
-              <div class="pricing-details">
-                <h2>2 Person</h2>
-                <span class="price-once hide">$90</span>
-                <span class="price-twice">$120</span>
-                <ul>
-                  <li>Monthly</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-
-          <div class="price-item col-md-4 col-sm-6 col-xs-12">
-            <div class="pricing-table elevation--z1">
-              <div class="pricing-details">
-                <h2>3 or more</h2>
-                <span class="price-once hide">$120</span>
-                <span class="price-twice">$155</span>
-                <ul>
-                  <li>Monthly</li>
-                  <li>Capped Price</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-
-        </div>
-        <div class="pricing-footer text-center">
-          <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdG70Vzs0Qn0_RS0W_vbBcCkAMkAC-aE0lYJDem0-5v_qWDWQ/viewform" class="btn btn-common" id="apply">Book for your free trial</a>
         </div>
       </div>
     </div>
@@ -542,84 +418,17 @@
   <section id="team" class="section">
     <div class="container">
       <div class="section-header">
-        <h2 class="section-title">Our Team</h2>
+        <h2 class="section-title">About Angela</h2>
         <hr class="lines">
-        <p class="section-subtitle">Meet our team of highly qualified, experienced, & motivated instructors.</p>
-      </div>
-      <div class="row">
-        <div class="col-lg-3 col-md-6 col-xs-12">
-          <div class="single-team">
-            <picture>
-              <source srcset="img/team/team1.webp" type="image/webp">
-              <source srcset="img/team/team1.jpg" type="image/jpeg">
-              <img src="img/team/team1.jpg" alt="">
+        <div class="row">
+          <p class="section-subtitle">
+            <picture style="float: left; padding-right: 1em;">
+              <source srcset="img/team/ange.jpg" type="image/jpeg">
+              <img src="img/team/ange.jpg" alt="Gallery Image" />
             </picture>
-            <div class="team-details">
-              <div class="team-inner">
-                <h4 class="team-title">Angela Oliver</h4>
-                <ul>
-                  <li>Founder</li>
-                  <li>Head TKD Instructor</li>
-                  <li>Personal Trainer</li>
-                  <li>Self Defence Coach</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 col-xs-12">
-          <div class="single-team">
-            <picture>
-              <source srcset="img/team/team2.webp" type="image/webp">
-              <source srcset="img/team/team2.jpg" type="image/jpeg">
-              <img src="img/team/team2.jpg" alt="">
-            </picture>
-            <div class="team-details">
-              <div class="team-inner">
-                <h4 class="team-title">Helen Caley</h4>
-                <ul>
-                  <li>TKD Instructor</li>
-                  <li>TKD High Performance</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 col-xs-12">
-          <div class="single-team">
-            <picture>
-              <source srcset="img/team/team3.webp" type="image/webp">
-              <source srcset="img/team/team3.jpg" type="image/jpeg">
-              <img src="img/team/team3.jpg" alt="">
-            </picture>
-            <div class="team-details">
-              <div class="team-inner">
-                <h4 class="team-title">Craig Oliver</h4>
-                <ul>
-                  <li>TKD Kubz / Kids Instructor</li>
-                  <li>Self Defence Coach</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 col-xs-12">
-          <div class="single-team">
-            <picture>
-              <source srcset="img/team/team4.webp" type="image/webp">
-              <source srcset="img/team/team4.jpg" type="image/jpeg">
-              <img class="img-fulid" src="img/team/team4.jpg" alt="">
-            </picture>
-            <div class="team-details">
-              <div class="team-inner">
-                <h4 class="team-title">Luke Jackson</h4>
-                <ul>
-                  <li>TKD Instructor</li>
-                  <li>TKD High Performance</li>
-                </ul>
-              </div>
-            </div>
-          </div>
+            Certified in pre and postnatal coaching, and continuing my education in all things woman, and movement therapy coaching, I help women feel fit, strong and empowered through all ages and stages of life through both fitness and self-defence based training. I am passionate about delivering a quality service to the women of Christchurch, particularly those struggling with their fitness during pregnancy, post –pregnancy and menopause. Helping women (and men!) with pelvic floor dysfunction find their strength again is a personal crusade of mine, as I strongly believe that having issues like these does not make you BROKEN! There is absolutely life to live and exercise to do when you are carrying a pelvic floor injury or abdominal separation.  I am an accredited trainer with Protect Self Defence, NZ’s number one provider of personal protection education and my favourite part of this work is working with women and young people to feel safe, strong and empowered to live their best life.
+            <br><br>On a personal level, I am Mum to two gorgeous young children and wife to a super nice guy (who also coaches in the self-defence side of this work). I have a background in ITF Taekwon-Do (a fancy kicking martial art), having just owned my own TKD school up to June of 2019, when I sold the club to focus more on my family and development of Pulse – Training for Life. I was training for my 4th dan grading while I was pregnant with my youngest, in hindsight, I realised that I hadn’t really been training in a safe and effective way during my  pregnancy and  the postpartum period. I was diagnosed in 2018 with a 2-3 degree pelvic organ prolapse which I have been working hard to recover from and rebuild my strength to get back to the training that I love so dearly. Because of this, I’ve made it my mission to get SUPER well educated about this and pass that knowledge on to you, so you can have a better experience and faster recovery than I did!
+          </p>
         </div>
       </div>
     </div>
@@ -696,8 +505,8 @@
             <div class="contact-us">
               <h3>Contact us</h3>
               <div class="contact-address">
-                <p>Casebrook Intermediate, 90 Veitches Road, Christchurch </p>
-                <p class="phone">Phone: <span>03 929 0067</span></p>
+                <p>Christchurch </p>
+                <p class="phone">Phone: <span>021 842011</span></p>
                 <p class="email">Email: <a target="_blank" href="mailto:angela@pulsetrainingforlife.co.nz">angela@pulsetrainingforlife.co.nz</a></p>
               </div>
               <div class="social-icons">
@@ -768,7 +577,7 @@
               <a class="page-scroll" href="#pricing">Pricing</a>
             </li>
             <li>
-              <a class="page-scroll" href="#team">Team</a>
+              <a class="page-scroll" href="#team">Your Coach</a>
             </li>
           </ul>
         </div>
