--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
             <div class="contact-us">
               <h3>Contact us</h3>
               <div class="contact-address">
-                <p>Christchurch </p>
+                <p>Northern Christchurch</p>
                 <p class="phone">Phone: <span>021 842011</span></p>
                 <p class="email">Email: <a target="_blank" href="mailto:angela@pulsetrainingforlife.co.nz">angela@pulsetrainingforlife.co.nz</a></p>
               </div>
